grammar/RubyParser.py
# Generated from C:\Users\wehil\PycharmProjects\Ruby-to-Python-converter\grammar\Ruby.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RubyParser ( Parser ):

    grammarFileName = "Ruby.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'elsif'", "'else'", "'end'", 
                     "'unless'", "'do'", "'while'", "'begin'", "'until'", 
                     "'for'", "'in'", "<INVALID>", "<INVALID>", "'new'", 
                     "'class'", "'def'", "'return'", "'and'", "'or'", "'nil'", 
                     "'true'", "'false'", "'@'", "'@@'", "'$'", "'#'", "'''", 
                     "'('", "')'", "'['", "']'", "','", "<INVALID>", "';'", 
                     "'+='", "'-='", "'*='", "'/='", "'%='", "'**='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'**'", "'++'", "'--'", 
                     "'>'", "'<'", "'<='", "'>='", "'<=>'", "'=='", "'!='", 
                     "'==='", "'='", "'.'", "'puts'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'next'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSIF", "ELSE", "END", "UNLESS", 
                      "DO", "WHILE", "BEGIN", "UNTIL", "FOR", "IN", "STRING", 
                      "CLASSNAME", "NEW", "CLASS", "DEF", "RETURN", "AND", 
                      "OR", "NIL", "TRUE", "FALSE", "AT", "ATAT", "DOLLAR", 
                      "HASH", "APOSTROPHE", "LEFTPAREN", "RIGHTPAREN", "LEFTBRACKET", 
                      "RIGTHBRACKET", "COMMA", "NEWLINE", "SEMICOLON", "PLUSEQUAL", 
                      "MINUSEQUAL", "MULEQUAL", "DIVIDEEQUAL", "MODEQUAL", 
                      "MULMULEQUAL", "PLUS", "MINUS", "MUL", "DIVIDE", "MOD", 
                      "MULMUL", "PLUSPLUS", "MINUSMINUS", "GREATER", "LESS", 
                      "LESSEQUAL", "MOREEQUAL", "LESSEQUALMORE", "EQUALEQUAL", 
                      "NOTEQUAL", "EQUALEQUALEQUAL", "EQUAL", "DOT", "PUTS", 
                      "ID", "NUMBER", "COMMENT", "WHITE_SPACE", "NEXT" ]

    RULE_program = 0
    RULE_statementList = 1
    RULE_terminator = 2
    RULE_statement = 3
    RULE_functions = 4
    RULE_instructions = 5
    RULE_loop = 6
    RULE_bool = 7
    RULE_array = 8
    RULE_value = 9
    RULE_ifInstruction = 10
    RULE_elseInstruction = 11
    RULE_elsifInstruction = 12
    RULE_unlessInstruction = 13
    RULE_whileLoop = 14
    RULE_forLoop = 15
    RULE_untilLoop = 16
    RULE_comparisonOperator = 17
    RULE_operator = 18
    RULE_condition = 19
    RULE_variables = 20
    RULE_mathOperation = 21
    RULE_bracketExpression = 22
    RULE_function = 23
    RULE_parameters = 24
    RULE_class = 25
    RULE_classBody = 26
    RULE_functionCall = 27
    RULE_assignmentOperator = 28
    RULE_loopBody = 29
    RULE_assignment = 30
    RULE_classObject = 31
    RULE_methodCall = 32
    RULE_putsFunction = 33
    RULE_crlf = 34

    ruleNames =  [ "program", "statementList", "terminator", "statement", 
                   "functions", "instructions", "loop", "bool", "array", 
                   "value", "ifInstruction", "elseInstruction", "elsifInstruction", 
                   "unlessInstruction", "whileLoop", "forLoop", "untilLoop", 
                   "comparisonOperator", "operator", "condition", "variables", 
                   "mathOperation", "bracketExpression", "function", "parameters", 
                   "class", "classBody", "functionCall", "assignmentOperator", 
                   "loopBody", "assignment", "classObject", "methodCall", 
                   "putsFunction", "crlf" ]

    EOF = Token.EOF
    IF=1
    ELSIF=2
    ELSE=3
    END=4
    UNLESS=5
    DO=6
    WHILE=7
    BEGIN=8
    UNTIL=9
    FOR=10
    IN=11
    STRING=12
    CLASSNAME=13
    NEW=14
    CLASS=15
    DEF=16
    RETURN=17
    AND=18
    OR=19
    NIL=20
    TRUE=21
    FALSE=22
    AT=23
    ATAT=24
    DOLLAR=25
    HASH=26
    APOSTROPHE=27
    LEFTPAREN=28
    RIGHTPAREN=29
    LEFTBRACKET=30
    RIGTHBRACKET=31
    COMMA=32
    NEWLINE=33
    SEMICOLON=34
    PLUSEQUAL=35
    MINUSEQUAL=36
    MULEQUAL=37
    DIVIDEEQUAL=38
    MODEQUAL=39
    MULMULEQUAL=40
    PLUS=41
    MINUS=42
    MUL=43
    DIVIDE=44
    MOD=45
    MULMUL=46
    PLUSPLUS=47
    MINUSMINUS=48
    GREATER=49
    LESS=50
    LESSEQUAL=51
    MOREEQUAL=52
    LESSEQUALMORE=53
    EQUALEQUAL=54
    NOTEQUAL=55
    EQUALEQUALEQUAL=56
    EQUAL=57
    DOT=58
    PUTS=59
    ID=60
    NUMBER=61
    COMMENT=62
    WHITE_SPACE=63
    NEXT=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(RubyParser.StatementListContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = RubyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.statementList(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(RubyParser.StatementContext,0)


        def terminator(self):
            return self.getTypedRuleContext(RubyParser.TerminatorContext,0)


        def statementList(self):
            return self.getTypedRuleContext(RubyParser.StatementListContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)



    def statementList(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RubyParser.StatementListContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_statementList, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 5, 7, 9, 10, 15, 16, 59, 60, 62]:
                self.state = 73
                self.statement()
                self.state = 74
                self.terminator()
                pass
            elif token in [33, 34]:
                self.state = 76
                self.terminator()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 85
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = RubyParser.StatementListContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_statementList)
                    self.state = 79
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 80
                    self.statement()
                    self.state = 81
                    self.terminator() 
                self.state = 87
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TerminatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(RubyParser.NEWLINE, 0)

        def SEMICOLON(self):
            return self.getToken(RubyParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return RubyParser.RULE_terminator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminator" ):
                listener.enterTerminator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminator" ):
                listener.exitTerminator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerminator" ):
                return visitor.visitTerminator(self)
            else:
                return visitor.visitChildren(self)




    def terminator(self):

        localctx = RubyParser.TerminatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_terminator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not(_la==33 or _la==34):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functions(self):
            return self.getTypedRuleContext(RubyParser.FunctionsContext,0)


        def instructions(self):
            return self.getTypedRuleContext(RubyParser.InstructionsContext,0)


        def loop(self):
            return self.getTypedRuleContext(RubyParser.LoopContext,0)


        def variables(self):
            return self.getTypedRuleContext(RubyParser.VariablesContext,0)


        def assignment(self):
            return self.getTypedRuleContext(RubyParser.AssignmentContext,0)


        def classObject(self):
            return self.getTypedRuleContext(RubyParser.ClassObjectContext,0)


        def methodCall(self):
            return self.getTypedRuleContext(RubyParser.MethodCallContext,0)


        def COMMENT(self):
            return self.getToken(RubyParser.COMMENT, 0)

        def putsFunction(self):
            return self.getTypedRuleContext(RubyParser.PutsFunctionContext,0)


        def class_(self):
            return self.getTypedRuleContext(RubyParser.ClassContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = RubyParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.functions()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.instructions()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.loop()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.variables()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.assignment()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 95
                self.classObject()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 96
                self.methodCall()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 97
                self.match(RubyParser.COMMENT)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 98
                self.putsFunction()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 99
                self.class_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(RubyParser.FunctionContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(RubyParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_functions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctions" ):
                listener.enterFunctions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctions" ):
                listener.exitFunctions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctions" ):
                return visitor.visitFunctions(self)
            else:
                return visitor.visitChildren(self)




    def functions(self):

        localctx = RubyParser.FunctionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functions)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.function()
                pass
            elif token in [60]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.functionCall()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifInstruction(self):
            return self.getTypedRuleContext(RubyParser.IfInstructionContext,0)


        def unlessInstruction(self):
            return self.getTypedRuleContext(RubyParser.UnlessInstructionContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_instructions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstructions" ):
                listener.enterInstructions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstructions" ):
                listener.exitInstructions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstructions" ):
                return visitor.visitInstructions(self)
            else:
                return visitor.visitChildren(self)




    def instructions(self):

        localctx = RubyParser.InstructionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_instructions)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.ifInstruction()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.unlessInstruction()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def whileLoop(self):
            return self.getTypedRuleContext(RubyParser.WhileLoopContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(RubyParser.ForLoopContext,0)


        def untilLoop(self):
            return self.getTypedRuleContext(RubyParser.UntilLoopContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = RubyParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_loop)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.whileLoop()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.forLoop()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.untilLoop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(RubyParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(RubyParser.FALSE, 0)

        def NIL(self):
            return self.getToken(RubyParser.NIL, 0)

        def getRuleIndex(self):
            return RubyParser.RULE_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)




    def bool_(self):

        localctx = RubyParser.BoolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bool)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7340032) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFTBRACKET(self):
            return self.getToken(RubyParser.LEFTBRACKET, 0)

        def RIGTHBRACKET(self):
            return self.getToken(RubyParser.RIGTHBRACKET, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RubyParser.ValueContext)
            else:
                return self.getTypedRuleContext(RubyParser.ValueContext,i)


        def bool_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RubyParser.BoolContext)
            else:
                return self.getTypedRuleContext(RubyParser.BoolContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(RubyParser.COMMA)
            else:
                return self.getToken(RubyParser.COMMA, i)

        def getRuleIndex(self):
            return RubyParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = RubyParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(RubyParser.LEFTBRACKET)
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 61]:
                self.state = 118
                self.value()
                pass
            elif token in [20, 21, 22]:
                self.state = 119
                self.bool_()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 122
                self.match(RubyParser.COMMA)
                self.state = 125
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [12, 61]:
                    self.state = 123
                    self.value()
                    pass
                elif token in [20, 21, 22]:
                    self.state = 124
                    self.bool_()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(RubyParser.RIGTHBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(RubyParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(RubyParser.STRING, 0)

        def getRuleIndex(self):
            return RubyParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = RubyParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not(_la==12 or _la==61):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(RubyParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(RubyParser.ConditionContext,0)


        def crlf(self):
            return self.getTypedRuleContext(RubyParser.CrlfContext,0)


        def loopBody(self):
            return self.getTypedRuleContext(RubyParser.LoopBodyContext,0)


        def END(self):
            return self.getToken(RubyParser.END, 0)

        def elsifInstruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RubyParser.ElsifInstructionContext)
            else:
                return self.getTypedRuleContext(RubyParser.ElsifInstructionContext,i)


        def elseInstruction(self):
            return self.getTypedRuleContext(RubyParser.ElseInstructionContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_ifInstruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfInstruction" ):
                listener.enterIfInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfInstruction" ):
                listener.exitIfInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfInstruction" ):
                return visitor.visitIfInstruction(self)
            else:
                return visitor.visitChildren(self)




    def ifInstruction(self):

        localctx = RubyParser.IfInstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifInstruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(RubyParser.IF)
            self.state = 137
            self.condition()
            self.state = 138
            self.crlf()
            self.state = 139
            self.loopBody()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 140
                self.elsifInstruction()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 146
                self.elseInstruction()


            self.state = 149
            self.match(RubyParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(RubyParser.ELSE, 0)

        def crlf(self):
            return self.getTypedRuleContext(RubyParser.CrlfContext,0)


        def loopBody(self):
            return self.getTypedRuleContext(RubyParser.LoopBodyContext,0)


        def NEXT(self):
            return self.getToken(RubyParser.NEXT, 0)

        def getRuleIndex(self):
            return RubyParser.RULE_elseInstruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseInstruction" ):
                listener.enterElseInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseInstruction" ):
                listener.exitElseInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseInstruction" ):
                return visitor.visitElseInstruction(self)
            else:
                return visitor.visitChildren(self)




    def elseInstruction(self):
